tarantool/ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: tarantool-service
spec:
  type: ExternalName
  externalName: crud.tarantool.svc.cluster.local

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: examples-kv-topology
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: crud
              servicePort: 8081
            path: /
